--- a/kubernetes/apps/default/linkding/app/kustomization.yaml
+++ b/kubernetes/apps/default/linkding/app/kustomization.yaml
@@ -3,8 +3,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: default
-components:
-  - ../../components/common
 resources:
-  - ./echo/ks.yaml
-  - ./linkding/ks.yaml
+  - ./helmrelease.yaml
+  - ./ocirepository.yaml
