feat: try another approach for 1password

--- a/kubernetes/apps/external-secrets/stores/onepassword/clustersecretstore.yaml
+++ b/kubernetes/apps/external-secrets/stores/onepassword/clustersecretstore.yaml
@@ -1,19 +1,19 @@
 ---
-# yaml-language-server: $schema=https://k8s-schemas.bjw-s.dev/external-secrets.io/clustersecretstore_v1.json
+# yaml-language-server: $schema=https://kubernetes-schemas.devbu.io/external-secrets.io/clustersecretstore_v1beta1.json
 apiVersion: external-secrets.io/v1
 kind: ClusterSecretStore
 metadata:
-  name: onepassword
+  name: onepassword-connect
+  namespace: external-secrets
 spec:
   provider:
     onepassword:
       connectHost: http://onepassword-connect.external-secrets.svc.cluster.local:8080
       vaults:
-        Automation: 1
-        Services: 2
+        home-ops: 1
       auth:
         secretRef:
           connectTokenSecretRef:
-            name: onepassword-secret
+            name: onepassword-connect-secret
             key: token
             namespace: external-secrets
