--- a/kubernetes/apps/external-secrets/app/helmrelease.yaml
+++ b/kubernetes/apps/external-secrets/app/helmrelease.yaml
@@ -14,7 +14,7 @@ spec:
       sourceRef:
         kind: HelmRepository
         name: external-secrets
-        namespace: flux-system
+        namespace: external-secrets
   maxHistory: 3
   install:
     createNamespace: true
