chore: remove ingress for onepassword-connect

--- a/kubernetes/apps/external-secrets/stores/onepassword/helmrelease.yaml
+++ b/kubernetes/apps/external-secrets/stores/onepassword/helmrelease.yaml
@@ -68,18 +68,18 @@ spec:
           initialDelaySeconds: 15
       startup:
         enabled: false
-    ingress:
-      main:
-        enabled: true
-        ingressClassName: nginx
-        hosts:
-          - host: &host "onepassword-connect.kalde.in"
-            paths:
-              - path: /
-                pathType: Prefix
-        tls:
-          - hosts:
-              - *host
+    # ingress:
+    #   main:
+    #     enabled: true
+    #     ingressClassName: nginx
+    #     hosts:
+    #       - host: &host "onepassword-connect.kalde.in"
+    #         paths:
+    #           - path: /
+    #             pathType: Prefix
+    #     tls:
+    #       - hosts:
+    #           - *host
     podSecurityContext:
       runAsUser: 999
       runAsGroup: 999
