--- a/kubernetes/apps/external-secrets/ks.yaml
+++ b/kubernetes/apps/external-secrets/ks.yaml
@@ -30,6 +30,10 @@ spec:
   sourceRef:
     kind: GitRepository
     name: flux-system
+  decryption:
+    provider: sops
+    secretRef:
+      name: sops-age
   wait: true
   interval: 30m
   retryInterval: 1m
