chore: add nodes

--- a/talos/clusterconfig/.gitignore
+++ b/talos/clusterconfig/.gitignore
@@ -3,3 +3,7 @@ kubernetes-k8s-pi-2.yaml
 talosconfig
 kubernetes-k8s-pi-3.yaml
 kubernetes-k8s-pi-4.yaml
+kubernetes-k8s-pi-5.yaml
+kubernetes-k8s-pi-6.yaml
+kubernetes-k8s-pi-7.yaml
+kubernetes-k8s-pi-8.yaml
