--- a/kubernetes/apps/default/dailytrace/frontend/kustomization.yaml
+++ b/kubernetes/apps/default/dailytrace/frontend/kustomization.yaml
@@ -3,10 +3,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: default
-components:
-  - ../../components/common
 resources:
-  - ./dailytrace/ks.yaml
-  - ./echo/ks.yaml
-  - ./linkding/ks.yaml
-  - ./sync-todoist-to-habitica/ks.yaml
+  - ./ocirepository.yaml
+  - ./helmrelease.yaml
