--- a/kubernetes/apps/default/peppermint/app/cronjobs/kustomization.yaml
+++ b/kubernetes/apps/default/peppermint/app/cronjobs/kustomization.yaml
@@ -3,11 +3,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: default
-components:
-  - ../../components/common
 resources:
-  - ./dailytrace/ks.yaml
-  - ./echo/ks.yaml
-  - ./linkding/ks.yaml
-  - ./peppermint/ks.yaml
-  - ./sync-todoist-to-habitica/ks.yaml
+  - ./ocirepository.yaml
+  - ./helmrelease.yaml
+  - ./externalsecret.yaml
