feat: dailytrace db backup cronjob

--- a/kubernetes/apps/default/dailytrace/database-backup/externalsecret.yaml
+++ b/kubernetes/apps/default/dailytrace/database-backup/externalsecret.yaml
@@ -3,21 +3,22 @@
 apiVersion: external-secrets.io/v1
 kind: ExternalSecret
 metadata:
-  name: dailytrace
+  name: dailytrace-db-backup
   namespace: default
 spec:
   secretStoreRef:
     kind: ClusterSecretStore
     name: onepassword-connect
   target:
-    name: dailytrace-secret
+    name: dailytrace-db-backup-secret
     creationPolicy: Owner
     template:
       engineVersion: v2
       data:
-        # App
-        DATABASE_URL: "postgres://{{ .POSTGRES_USER }}:{{ .POSTGRES_PASS }}@dailytrace-db.default.svc.cluster.local/dailytrace?sslmode=disable"
+        DB_HOST: dailytrace-db.default.svc.cluster.local
+        DB_USER: "{{ .POSTGRES_USER }}"
+        DB_PASS: "{{ .POSTGRES_PASS }}"
   dataFrom:
     - extract:
-        key: dailytrace
-  refreshInterval: 5m
+        key:  dailytrace
+
