--- a/kubernetes/apps/default/dailytrace/ks.yaml
+++ b/kubernetes/apps/default/dailytrace/ks.yaml
@@ -50,3 +50,20 @@ spec:
   interval: 30m
   retryInterval: 1m
   timeout: 3m
+
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: cluster-apps-dailytrace-db-backup
+  namespace: flux-system
+spec:
+  path: ./kubernetes/apps/default/dailytrace/database-backup
+  prune: true
+  sourceRef:
+    kind: GitRepository
+    name: flux-system
+    namespace: flux-system
+  interval: 30m
+  retryInterval: 1m
+  timeout: 3m
