fix: variable substitution for SECRET_DOMAIN wasn't working

--- a/kubernetes/apps/longhorn/longhorn-system/app/helmrelease.yaml
+++ b/kubernetes/apps/longhorn/longhorn-system/app/helmrelease.yaml
@@ -28,4 +28,6 @@ spec:
       enabled: false
     service:
       ui:
-        type: ClusterIP
+        ports:
+          http:
+            port: 80
