fix: variable substitution for SECRET_DOMAIN wasn't working

--- a/kubernetes/apps/default/longhorn/httproute.yaml
+++ b/kubernetes/apps/default/longhorn/httproute.yaml
@@ -3,7 +3,7 @@ apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
 metadata:
   name: longhorn
-  namespace: longhorn-system
+  namespace: default
 spec:
   parentRefs:
     - group: gateway.networking.k8s.io
