--- a/kubernetes/apps/kube-system/cilium/gateway/referencegrant.yaml
+++ b/kubernetes/apps/kube-system/cilium/gateway/referencegrant.yaml
@@ -12,3 +12,17 @@ spec:
   to:
     - group: gateway.networking.k8s.io
       kind: Gateway
+---
+apiVersion: gateway.networking.k8s.io/v1beta1
+kind: ReferenceGrant
+metadata:
+  name: longhorn-service-access
+  namespace: longhorn-system
+spec:
+  from:
+    - group: gateway.networking.k8s.io
+      kind: HTTPRoute
+      namespace: longhorn-system
+  to:
+    - group: ""
+      kind: Service
