--- a/kubernetes/apps/longhorn/longhorn-system/app/helmrelease.yaml
+++ b/kubernetes/apps/longhorn/longhorn-system/app/helmrelease.yaml
@@ -23,11 +23,6 @@ spec:
       defaultReplicaCount: 2
       defaultLonghornStaticStorageClass: longhorn
     longhornUI:
-      replicas: 3
+      replicas: 0  # Disable the built-in UI
     ingress:
       enabled: false
-    service:
-      ui:
-        ports:
-          http:
-            port: 80
