fix: align controller name with service name in longhorn-ui app-template

--- a/kubernetes/apps/longhorn/longhorn-system/app/longhorn-ui-helmrelease.yaml
+++ b/kubernetes/apps/longhorn/longhorn-system/app/longhorn-ui-helmrelease.yaml
@@ -21,7 +21,7 @@ spec:
     keepHistory: false
   values:
     controllers:
-      longhorn-ui:
+      app:
         replicas: 3
         strategy: RollingUpdate
         containers:
