change service name trying to fix ingress issue

--- a/kubernetes/apps/longhorn/longhorn-system/app/longhorn-ui-helmrelease.yaml
+++ b/kubernetes/apps/longhorn/longhorn-system/app/longhorn-ui-helmrelease.yaml
@@ -52,6 +52,6 @@ spec:
             sectionName: https
         rules:
           - backendRefs:
-              - name: longhorn-ui-app
+              - name: longhorn-ui
                 namespace: longhorn-system
                 port: *port
