--- a/kubernetes/apps/longhorn/longhorn-system/app/httproute-standalone.yaml
+++ b/kubernetes/apps/longhorn/longhorn-system/app/httproute-standalone.yaml
@@ -3,10 +3,10 @@ apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
 metadata:
   name: longhorn-ui-standalone
-  namespace: longhorn-system
+  namespace: default
 spec:
   hostnames:
-    - longhorn.kalde.in
+    - longhorn-test2.kalde.in
   parentRefs:
     - name: external
       namespace: kube-system
