try another approach

--- a/kubernetes/apps/longhorn/longhorn-system/app/httproute-standalone.yaml
+++ b/kubernetes/apps/longhorn/longhorn-system/app/httproute-standalone.yaml
@@ -17,6 +17,6 @@ spec:
             type: PathPrefix
             value: /
       backendRefs:
-        - name: longhorn-ui
-          namespace: longhorn-system
-          port: 8000
+        - name: echo
+          namespace: default
+          port: 80
