--- a/kubernetes/apps/longhorn/longhorn-system/app/httproute-standalone.yaml
+++ b/kubernetes/apps/longhorn/longhorn-system/app/httproute-standalone.yaml
@@ -8,15 +8,20 @@ spec:
   hostnames:
     - longhorn-test2.kalde.in
   parentRefs:
-    - name: external
+    - group: gateway.networking.k8s.io
+      kind: Gateway
+      name: external
       namespace: kube-system
       sectionName: https
   rules:
-    - matches:
+    - backendRefs:
+        - group: ""
+          kind: Service
+          name: echo
+          namespace: default
+          port: 80
+          weight: 1
+      matches:
         - path:
             type: PathPrefix
             value: /
-      backendRefs:
-        - name: echo
-          namespace: default
-          port: 80
