--- a/kubernetes/apps/default/consolewiki/app/helmrelease.yaml
+++ b/kubernetes/apps/default/consolewiki/app/helmrelease.yaml
@@ -7,14 +7,9 @@ metadata:
   namespace: default
 spec:
   interval: 30m
-  chart:
-    spec:
-      chart: app-template
-      version: 1.5.1
-      sourceRef:
-        kind: HelmRepository
-        name: bjw-s
-        namespace: flux-system
+  chartRef:
+    kind: OCIRepository
+    name: consolewiki
   maxHistory: 2
   install:
     createNamespace: true
@@ -27,51 +22,53 @@ spec:
   uninstall:
     keepHistory: false
   values:
-    controller:
-      replicas: 1
-      strategy: RollingUpdate
-      annotations:
-        reloader.stakater.com/auto: "true"
-    image:
-      repository: redimp/otterwiki
-      tag: 2.14
+    controllers:
+      consolewiki:
+        replicas: 1
+        strategy: RollingUpdate
+        annotations:
+          reloader.stakater.com/auto: "true"
+        containers:
+          app:
+            image:
+              repository: redimp/otterwiki
+              tag: 2.14
+            resources:
+              requests:
+                cpu: 10m
+                memory: 250Mi
+              limits:
+                cpu: "1"
+                memory: 1000Mi
     service:
-      main:
+      app:
         ports:
           http:
             port: &port 80
     serviceMonitor:
-      main:
+      app:
         enabled: true
-    ingress:
-      main:
-        enabled: true
-        ingressClassName: nginx
-        annotations:
-          external-dns.alpha.kubernetes.io/target: "ingress.${SECRET_DOMAIN}"
-        hosts:
-          - host: &host "consolewiki.${SECRET_DOMAIN}"
-            paths:
-              - path: /
-                pathType: Prefix
-        tls:
-          - hosts:
-              - *host
+        endpoints:
+          - port: http
+    route:
+      app:
+        hostnames: ["consolewiki.kalde.in"]
+        parentRefs:
+          - name: external
+            namespace: kube-system
+            sectionName: https
+        rules:
+          - backendRefs:
+              - identifier: app
+                port: *port
     persistence:
       config:
-        enabled: true
         existingClaim: consolewiki-data-v1
-        mountPath: /app-data
+        globalMounts:
+          - path: /app-data
       backup:
-        enabled: true
         type: nfs
         server: 192.168.10.3
         path: /volume1/cluster/backup/consolewiki
-        mountPath: /backup
-    resources:
-      requests:
-        cpu: 10m
-        memory: 250Mi
-      limits:
-        cpu: "1"
-        memory: 1000Mi
+        globalMounts:
+          - path: /backup
