feat: add miniflux

--- a/kubernetes/apps/default/kustomization.yaml
+++ b/kubernetes/apps/default/kustomization.yaml
@@ -11,5 +11,6 @@ resources:
   - ./echo/ks.yaml
   - ./linkding/ks.yaml
   - ./longhorn/ks.yaml
+  - ./miniflux/ks.yaml
   - ./peppermint/ks.yaml
   - ./sync-todoist-to-habitica/ks.yaml
