--- a/kubernetes/apps/default/wallabag/app/cronjobs/helmrelease.yaml
+++ b/kubernetes/apps/default/wallabag/app/cronjobs/helmrelease.yaml
@@ -1,20 +1,15 @@
 ---
-# yaml-language-server: $schema=https://kubernetes-schemas.devbu.io/helm.toolkit.fluxcd.io/helmrelease_v2beta1.json
+# yaml-language-server: $schema=https://raw.githubusercontent.com/bjw-s-labs/helm-charts/main/charts/other/app-template/schemas/helmrelease-helm-v2.schema.json
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
   name: wallabag-db-backup
   namespace: media
 spec:
+  chartRef:
+    kind: OCIRepository
+    name: wallabag-db-backup
   interval: "30m"
-  chart:
-    spec:
-      chart: app-template
-      version: 1.5.1
-      sourceRef:
-        kind: HelmRepository
-        name: bjw-s
-        namespace: flux-system
   maxHistory: 2
   install:
     remediation:
@@ -26,23 +21,25 @@ spec:
   uninstall:
     keepHistory: false
   values:
-    controller:
-      type: cronjob
-      cronjob:
-        concurrencyPolicy: Forbid
-        schedule: "@daily"
-    restartPolicy: OnFailure
-    image:
-      repository: casmith/pgsqldump
-      tag: 0.1.0
-    imagePullPolicy: IfNotPresent
-    env:
-      DB_NAME: wallabag
-    envFrom:
-      - secretRef:
-          name: wallabag-db-backup-secret
+    controllers:
+      backup:
+        type: cronjob
+        cronjob:
+          concurrencyPolicy: Forbid
+          schedule: "@daily"
+        containers:
+          app:
+            image:
+              repository: casmith/pgsqldump
+              tag: 0.1.0
+            env:
+              DB_NAME: wallabag
+            envFrom:
+              - secretRef:
+                  name: wallabag-db-backup-secret
+            restartPolicy: OnFailure
     service:
-      main:
+      backup:
         enabled: false
     persistence:
       backup:
@@ -50,4 +47,5 @@ spec:
         type: nfs
         server: 192.168.10.3
         path: /volume1/cluster/db-backup/wallabag
-        mountPath: /pgsqldump
+        globalMounts:
+          - path: /pgsqldump
