--- a/kubernetes/apps/media/sonarr/ks.yaml
+++ b/kubernetes/apps/media/sonarr/ks.yaml
@@ -2,22 +2,22 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: cluster-apps-sabnzbd
+  name: cluster-apps-sonarr
   namespace: flux-system
 spec:
   dependsOn:
     - name: cluster-apps-longhorn
-  path: ./kubernetes/apps/media/sabnzbd/app
+  path: ./kubernetes/apps/media/sonarr/app
   prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
     namespace: flux-system
-#  healthChecks:
-#    - apiVersion: helm.toolkit.fluxcd.io/v2beta1
-#      kind: HelmRelease
-#      name: sabnzbd
-#      namespace: media
+  healthChecks:
+    - apiVersion: helm.toolkit.fluxcd.io/v2beta1
+      kind: HelmRelease
+      name: sonarr
+      namespace: media
   interval: 30m
   retryInterval: 1m
   timeout: 3m
