--- a/kubernetes/apps/media/kustomization.yaml
+++ b/kubernetes/apps/media/kustomization.yaml
@@ -7,6 +7,7 @@ resources:
   - ./namespace.yaml
   # Flux-Kustomizations
   - ./sabnzbd/ks.yaml
+  - ./lidarr/ks.yaml
   - ./radarr/ks.yaml
   - ./sonarr/ks.yaml
 
