fix: podSecurityContexts placed at the wrong location in helmreleases

--- a/kubernetes/apps/media/radarr/app/helmrelease.yaml
+++ b/kubernetes/apps/media/radarr/app/helmrelease.yaml
@@ -23,14 +23,6 @@ spec:
       retries: 5
 
   values:
-    podSecurityContext:
-      runAsUser: 1026
-      runAsGroup: 65537
-      fsGroup: 65537
-      fsGroupChangePolicy: "OnRootMismatch"
-      supplementalGroups:
-        - 100
-
     initContainers:
       - name: 01-init-db
         image: ghcr.io/onedr0p/postgres-init:17.4
@@ -41,6 +33,14 @@ spec:
 
     controllers:
       radarr:
+        pod:
+          securityContext:
+            runAsUser: 1026
+            runAsGroup: 65537
+            fsGroup: 65537
+            fsGroupChangePolicy: "OnRootMismatch"
+            supplementalGroups:
+              - 100
         containers:
           app:
             image:
