--- a/kubernetes/apps/media/sonarr/app/helmrelease.yaml
+++ b/kubernetes/apps/media/sonarr/app/helmrelease.yaml
@@ -20,14 +20,6 @@ spec:
       retries: 5
 
   values:
-    podSecurityContext:
-      runAsUser: 1026
-      runAsGroup: 65537
-      fsGroup: 65537
-      fsGroupChangePolicy: "OnRootMismatch"
-      supplementalGroups:
-        - 100
-
     initContainers:
       - name: 01-init-db
         image: ghcr.io/onedr0p/postgres-init:17.4
@@ -38,6 +30,14 @@ spec:
 
     controllers:
       sonarr:
+        pod:
+          securityContext:
+            runAsUser: 1026
+            runAsGroup: 65537
+            fsGroup: 65537
+            fsGroupChangePolicy: "OnRootMismatch"
+            supplementalGroups:
+              - 100
         containers:
           app:
             image:
