--- a/kubernetes/apps/media/lidarr/app/helmrelease.yaml
+++ b/kubernetes/apps/media/lidarr/app/helmrelease.yaml
@@ -25,12 +25,6 @@ spec:
     - name: longhorn
       namespace: longhorn-system
   values:
-    podSecurityContext:
-      runAsUser: 1024
-      runAsGroup: 100
-      fsGroup: 100
-      fsGroupChangePolicy: OnRootMismatch
-
     initContainers:
       - name: 01-init-db
         image: ghcr.io/onedr0p/postgres-init:17.4
@@ -42,6 +36,12 @@ spec:
     controllers:
       lidarr:
         type: statefulset
+        pod:
+          securityContext:
+            runAsUser: 1024
+            runAsGroup: 100
+            fsGroup: 100
+            fsGroupChangePolicy: OnRootMismatch
         containers:
           app:
             image:
