--- a/kubernetes/apps/default/kustomization.yaml
+++ b/kubernetes/apps/default/kustomization.yaml
@@ -13,6 +13,7 @@ resources:
   - ./linkding/ks.yaml
   - ./longhorn/ks.yaml
   - ./miniflux/ks.yaml
+  - ./n8n/ks.yaml
   - ./nextcloud/ks.yaml
   - ./peppermint/ks.yaml
   - ./sync-todoist-to-habitica/ks.yaml
