--- a/kubernetes/apps/default/kustomization.yaml
+++ b/kubernetes/apps/default/kustomization.yaml
@@ -12,6 +12,7 @@ resources:
   - ./echo/ks.yaml
   - ./home-assistant/ks.yaml
   - ./kapowarr/ks.yaml
+  - ./kavita/ks.yaml
   - ./linkding/ks.yaml
   - ./longhorn/ks.yaml
   - ./miniflux/ks.yaml
