--- a/kubernetes/apps/default/paperless-ngx/ks.yaml
+++ b/kubernetes/apps/default/paperless-ngx/ks.yaml
@@ -2,6 +2,23 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
+  name: cluster-apps-paperless-ngx-redis
+  namespace: flux-system
+spec:
+  path: ./kubernetes/apps/default/paperless-ngx/redis
+  prune: true
+  sourceRef:
+    kind: GitRepository
+    name: flux-system
+    namespace: flux-system
+  interval: 30m
+  retryInterval: 1m
+  timeout: 3m
+
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
   name: cluster-apps-paperless-ngx
   namespace: flux-system
 spec:
@@ -25,21 +42,4 @@ spec:
     - name: cluster-apps-external-secrets-stores
       namespace: flux-system
     - name: cluster-apps-paperless-ngx-redis
-      namespace: flux-system
-
----
-apiVersion: kustomize.toolkit.fluxcd.io/v1
-kind: Kustomization
-metadata:
-  name: cluster-apps-paperless-ngx-redis
-  namespace: flux-system
-spec:
-  path: ./kubernetes/apps/default/paperless-ngx/redis
-  prune: true
-  sourceRef:
-    kind: GitRepository
-    name: flux-system
-    namespace: flux-system
-  interval: 30m
-  retryInterval: 1m
-  timeout: 3m
+      namespace: default
