--- a/kubernetes/apps/default/kustomization.yaml
+++ b/kubernetes/apps/default/kustomization.yaml
@@ -6,6 +6,7 @@ namespace: default
 components:
   - ../../components/common
 resources:
+  - ./akaunting/ks.yaml
   - ./changedetection/ks.yaml
   - ./consolewiki/ks.yaml
   - ./dailytrace/ks.yaml
