--- a/kubernetes/apps/default/miniflux/app/cronjobs/helmrelease.yaml
+++ b/kubernetes/apps/default/miniflux/app/cronjobs/helmrelease.yaml
@@ -31,9 +31,10 @@ spec:
           app:
             image:
               repository: casmith/pgsqldump
-              tag: 0.1.0
+              tag: v0.2.0
             env:
               DB_NAME: miniflux
+              FLAGS: "-Fc"
             envFrom:
               - secretRef:
                   name: miniflux-db-backup-secret
