--- a/kubernetes/apps/default/paperless-ngx/app/cronjobs/helmrelease.yaml
+++ b/kubernetes/apps/default/paperless-ngx/app/cronjobs/helmrelease.yaml
@@ -34,10 +34,11 @@ spec:
     restartPolicy: OnFailure
     image:
       repository: casmith/pgsqldump
-      tag: 0.1.0
+      tag: v0.2.0
     imagePullPolicy: IfNotPresent
     env:
       DB_NAME: paperless
+      FLAGS: "-Fc"
     envFrom:
       - secretRef:
           name: paperless-db-backup-secret
