--- a/kubernetes/apps/default/paperless-ngx/app/cronjobs/helmrelease.yaml
+++ b/kubernetes/apps/default/paperless-ngx/app/cronjobs/helmrelease.yaml
@@ -38,7 +38,7 @@ spec:
     imagePullPolicy: IfNotPresent
     env:
       DB_NAME: paperless
-      FLAGS: "-Fc"
+      FLAGS: "--format=custom --no-owner"
     envFrom:
       - secretRef:
           name: paperless-db-backup-secret
