--- a/talos/clusterconfig/.gitignore
+++ b/talos/clusterconfig/.gitignore
@@ -7,3 +7,6 @@ kubernetes-k8s-pi-5.yaml
 kubernetes-k8s-pi-6.yaml
 kubernetes-k8s-pi-7.yaml
 kubernetes-k8s-pi-8.yaml
+kubernetes-k8s-cp-2.yaml
+kubernetes-k8s-cp-3.yaml
+kubernetes-k8s-pi-1.yaml
