--- a/kubernetes/apps/media/sonarr/app/cronjobs/kustomization.yaml
+++ b/kubernetes/apps/media/sonarr/app/cronjobs/kustomization.yaml
@@ -4,6 +4,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: media
 resources:
+  - ./ocirepository.yaml
   - ./helmrelease-log-backup.yaml
   - ./helmrelease-main-backup.yaml
   - ./externalsecret.yaml
