--- a/kubernetes/apps/media/lidarr/app/cronjobs/helmrelease-main-backup.yaml
+++ b/kubernetes/apps/media/lidarr/app/cronjobs/helmrelease-main-backup.yaml
@@ -1,5 +1,5 @@
 ---
-# yaml-language-server: $schema=https://kubernetes-schemas.devbu.io/helm.toolkit.fluxcd.io/helmrelease_v2beta1.json
+# yaml-language-server: $schema=https://raw.githubusercontent.com/bjw-s-labs/helm-charts/main/charts/other/app-template/schemas/helmrelease-helm-v2.schema.json
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
@@ -7,14 +7,9 @@ metadata:
   namespace: media
 spec:
   interval: "30m"
-  chart:
-    spec:
-      chart: app-template
-      version: 1.5.1
-      sourceRef:
-        kind: HelmRepository
-        name: bjw-s
-        namespace: flux-system
+  chartRef:
+    kind: OCIRepository
+    name: lidarr-db-backup-main
   maxHistory: 2
   install:
     remediation:
@@ -26,24 +21,26 @@ spec:
   uninstall:
     keepHistory: false
   values:
-    controller:
-      type: cronjob
-      cronjob:
-        concurrencyPolicy: Forbid
-        schedule: "@daily"
-    restartPolicy: OnFailure
-    image:
-      repository: casmith/pgsqldump
-      tag: v0.2.0
-    imagePullPolicy: IfNotPresent
-    env:
-      DB_NAME: lidarr_main
-      FLAGS: "-Fc"
-    envFrom:
-      - secretRef:
-          name: lidarr-db-backup-secret
+    controllers:
+      backup:
+        type: cronjob
+        cronjob:
+          concurrencyPolicy: Forbid
+          schedule: "@daily"
+        containers:
+          app:
+            image:
+              repository: casmith/pgsqldump
+              tag: v0.2.0
+            env:
+              DB_NAME: lidarr_main
+              FLAGS: "-Fc"
+            envFrom:
+              - secretRef:
+                  name: lidarr-db-backup-secret
+            restartPolicy: OnFailure
     service:
-      main:
+      backup:
         enabled: false
     persistence:
       backup:
@@ -51,4 +48,5 @@ spec:
         type: nfs
         server: 192.168.10.3
         path: /volume1/cluster/db-backup/lidarr
-        mountPath: /pgsqldump
+        globalMounts:
+          - path: /pgsqldump
