--- a/kubernetes/apps/external-secrets/stores/onepassword/helmrelease.yaml
+++ b/kubernetes/apps/external-secrets/stores/onepassword/helmrelease.yaml
@@ -1,4 +1,5 @@
 ---
+# yaml-language-server: $schema=https://raw.githubusercontent.com/bjw-s-labs/helm-charts/main/charts/other/app-template/schemas/helmrelease-helm-v2.schema.json
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
@@ -6,14 +7,9 @@ metadata:
   namespace: external-secrets
 spec:
   interval: 30m
-  chart:
-    spec:
-      chart: app-template
-      version: 1.5.1
-      sourceRef:
-        kind: HelmRepository
-        name: bjw-s
-        namespace: flux-system
+  chartRef:
+    kind: OCIRepository
+    name: onepassword-connect
   maxHistory: 3
   install:
     createNamespace: true
@@ -26,48 +22,91 @@ spec:
   uninstall:
     keepHistory: false
   values:
-    controller:
-      annotations:
-        reloader.stakater.com/auto: "true"
-    image:
-      # https://github.com/1Password/connect/issues/56
-      repository: docker.io/1password/connect-api
-      tag: 1.8.1
-    env:
-      OP_BUS_PORT: "11220"
-      OP_BUS_PEERS: "localhost:11221"
-      OP_HTTP_PORT: &port 8080
-      OP_SESSION:
-        valueFrom:
-          secretKeyRef:
-            name: onepassword-connect-secret
-            key: 1password-credentials.json
+    controllers:
+      onepassword:
+        annotations:
+          reloader.stakater.com/auto: "true"
+        containers:
+          app:
+            image:
+              # https://github.com/1Password/connect/issues/56
+              repository: docker.io/1password/connect-api
+              tag: 1.8.1
+            env:
+              OP_BUS_PORT: "11220"
+              OP_BUS_PEERS: "localhost:11221"
+              OP_HTTP_PORT: &port 8080
+              OP_SESSION:
+                valueFrom:
+                  secretKeyRef:
+                    name: onepassword-connect-secret
+                    key: 1password-credentials.json
+            probes:
+              liveness:
+                enabled: true
+                custom: true
+                spec:
+                  httpGet:
+                    path: /heartbeat
+                    port: *port
+                  initialDelaySeconds: 15
+                  periodSeconds: 30
+                  failureThreshold: 3
+              readiness:
+                enabled: true
+                custom: true
+                spec:
+                  httpGet:
+                    path: /health
+                    port: *port
+                  initialDelaySeconds: 15
+              startup:
+                enabled: false
+            resources:
+              requests:
+                cpu: 5m
+                memory: 10Mi
+              limits:
+                memory: 100Mi
+          sync:
+            image:
+              repository: docker.io/1password/connect-sync
+              tag: 1.8.1
+              pullPolicy: IfNotPresent
+            env:
+              OP_HTTP_PORT: 8081
+              OP_BUS_PORT: "11221"
+              OP_BUS_PEERS: "localhost:11220"
+              OP_SESSION:
+                valueFrom:
+                  secretKeyRef:
+                    name: onepassword-connect-secret
+                    key: 1password-credentials.json
+            probes:
+              readiness:
+                enabled: true
+                custom: true
+                spec:
+                  httpGet:
+                    path: /health
+                    port: 8081
+                  initialDelaySeconds: 15
+              liveness:
+                enabled: true
+                custom: true
+                spec:
+                  httpGet:
+                    path: /heartbeat
+                    port: 8081
+                  failureThreshold: 3
+                  periodSeconds: 30
+                  initialDelaySeconds: 15
     service:
-      main:
+      app:
+        controller: onepassword
         ports:
           http:
             port: *port
-    probes:
-      liveness:
-        enabled: true
-        custom: true
-        spec:
-          httpGet:
-            path: /heartbeat
-            port: *port
-          initialDelaySeconds: 15
-          periodSeconds: 30
-          failureThreshold: 3
-      readiness:
-        enabled: true
-        custom: true
-        spec:
-          httpGet:
-            path: /health
-            port: *port
-          initialDelaySeconds: 15
-      startup:
-        enabled: false
     # ingress:
     #   main:
     #     enabled: true
@@ -80,44 +119,13 @@ spec:
     #     tls:
     #       - hosts:
     #           - *host
-    podSecurityContext:
-      runAsUser: 999
-      runAsGroup: 999
+    defaultPodOptions:
+      securityContext:
+        runAsUser: 999
+        runAsGroup: 999
     persistence:
       shared:
         enabled: true
         type: emptyDir
-        mountPath: /home/opuser/.op/data
-    resources:
-      requests:
-        cpu: 5m
-        memory: 10Mi
-      limits:
-        memory: 100Mi
-    sidecars:
-      sync:
-        image: docker.io/1password/connect-sync:1.8.1
-        imagePullPolicy: IfNotPresent
-        env:
-          - { name: OP_HTTP_PORT, value: &port 8081 }
-          - { name: OP_BUS_PORT, value: "11221" }
-          - { name: OP_BUS_PEERS, value: "localhost:11220" }
-          - name: OP_SESSION
-            valueFrom:
-              secretKeyRef:
-                name: onepassword-connect-secret
-                key: 1password-credentials.json
-        readinessProbe:
-          httpGet:
-            path: /health
-            port: *port
-          initialDelaySeconds: 15
-        livenessProbe:
-          httpGet:
-            path: /heartbeat
-            port: *port
-          failureThreshold: 3
-          periodSeconds: 30
-          initialDelaySeconds: 15
-        volumeMounts:
-          - { name: shared, mountPath: /home/opuser/.op/data }
+        globalMounts:
+          - path: /home/opuser/.op/data
