--- a/kubernetes/apps/flux-system/flux-instance/app/helmrelease.yaml
+++ b/kubernetes/apps/flux-system/flux-instance/app/helmrelease.yaml
@@ -34,7 +34,7 @@ spec:
         - notification-controller
       sync:
         kind: GitRepository
-        url: "https://github.com/casmith/cluster-ops.git"
+        url: "https://github.com/casmith/home-ops.git"
         ref: "refs/heads/main"
         path: kubernetes/flux/cluster
       commonMetadata:
