fix(teslamate-db): remove security context

--- a/kubernetes/apps/database/teslamate-postgres/app/helmrelease.yaml
+++ b/kubernetes/apps/database/teslamate-postgres/app/helmrelease.yaml
@@ -28,12 +28,7 @@ spec:
           reloader.stakater.com/auto: "true"
         replicas: 1
         strategy: RollingUpdate
-        pod:
-          securityContext:
-            runAsUser: 999
-            runAsGroup: 999
-            fsGroup: 999
-            fsGroupChangePolicy: OnRootMismatch
+        pod: {}
         containers:
           app:
             image:
