feat: add kometa

--- a/kubernetes/apps/default/kustomization.yaml
+++ b/kubernetes/apps/default/kustomization.yaml
@@ -14,6 +14,7 @@ resources:
   - ./home-assistant/ks.yaml
   - ./kapowarr/ks.yaml
   - ./kavita/ks.yaml
+  - ./kometa/ks.yaml
   - ./linkding/ks.yaml
   #- ./longhorn/ks.yaml
   - ./miniflux/ks.yaml
