fix(immich): switch to new cluster

--- a/kubernetes/apps/default/immich/app/externalsecret.yaml
+++ b/kubernetes/apps/default/immich/app/externalsecret.yaml
@@ -17,13 +17,13 @@ spec:
       data:
         DB_USERNAME: "{{ .POSTGRES_USER }}"
         DB_PASSWORD: "{{ .POSTGRES_PASS }}"
-        DB_HOSTNAME: postgres-rw.database.svc.cluster.local
+        DB_HOSTNAME: immich-rw.database.svc.cluster.local
         DB_PORT: "5432"
         DB_DATABASE_NAME: immich
         POSTGRES_ENABLED: "true"
 
         INIT_POSTGRES_DBNAME: immich
-        INIT_POSTGRES_HOST: postgres-rw.database.svc.cluster.local
+        INIT_POSTGRES_HOST: immich-rw.database.svc.cluster.local
         INIT_POSTGRES_USER: "{{ .POSTGRES_USER }}"
         INIT_POSTGRES_PASS: "{{ .POSTGRES_PASS }}"
         INIT_POSTGRES_SUPER_PASS: "{{ .POSTGRES_SUPER_PASS }}"
