feat(immich): add storage to valkey

--- a/kubernetes/apps/default/immich/app/helmrelease.yaml
+++ b/kubernetes/apps/default/immich/app/helmrelease.yaml
@@ -151,3 +151,9 @@ spec:
           machine-learning:
             app:
               - path: /.config
+      valkey:
+        existingClaim: immich-valkey-v1
+        advancedMounts:
+          valkey:
+            app:
+              - path: /data
