--- a/kubernetes/apps/default/immich/app/pvc.yaml
+++ b/kubernetes/apps/default/immich/app/pvc.yaml
@@ -11,3 +11,17 @@ spec:
     requests:
       storage: 16Gi
   storageClassName: longhorn
+
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: immich-valkey-v1
+  namespace: default
+spec:
+  accessModes:
+    - ReadWriteMany
+  resources:
+    requests:
+      storage: 16Gi
+  storageClassName: longhorn
