--- a/kubernetes/apps/default/teslamate/cronjobs/externalsecret.yaml
+++ b/kubernetes/apps/default/teslamate/cronjobs/externalsecret.yaml
@@ -15,7 +15,7 @@ spec:
     template:
       engineVersion: v2
       data:
-        DB_HOST: postgres-rw.database.svc.cluster.local
+        DB_HOST: postgres17-rw.database.svc.cluster.local
         DB_USER: "{{ .DATABASE_USER }}"
         DB_PASS: "{{ .DATABASE_PASS }}"
   dataFrom:
