--- a/kubernetes/apps/default/teslamate/app/externalsecret.yaml
+++ b/kubernetes/apps/default/teslamate/app/externalsecret.yaml
@@ -24,7 +24,7 @@ spec:
 
         # init database
         INIT_POSTGRES_DBNAME: "{{ .DATABASE_NAME }}"
-        INIT_POSTGRES_HOST: postgres-rw.database.svc.cluster.local
+        INIT_POSTGRES_HOST: postgres17-rw.database.svc.cluster.local
         INIT_POSTGRES_USER: "{{ .DATABASE_USER }}"
         INIT_POSTGRES_PASS: "{{ .DATABASE_PASS }}"
         INIT_POSTGRES_SUPER_PASS: "{{ .POSTGRES_SUPER_PASS }}"
