chore: upgrade lidarr to postgres 17

--- a/kubernetes/apps/media/lidarr/app/externalsecret.yaml
+++ b/kubernetes/apps/media/lidarr/app/externalsecret.yaml
@@ -17,7 +17,7 @@ spec:
       data:
         # App
         LIDARR__API_KEY: "{{ .LIDARR__API_KEY }}"
-        LIDARR__POSTGRES__HOST: &dbHost postgres-rw.database.svc.cluster.local
+        LIDARR__POSTGRES__HOST: &dbHost postgres17-rw.database.svc.cluster.local
         LIDARR__POSTGRES__PORT: "5432"
         LIDARR__POSTGRES__USER: &dbUser "{{ .LIDARR__POSTGRES_USER }}"
         LIDARR__POSTGRES__PASSWORD: &dbPass "{{ .LIDARR__POSTGRES_PASSWORD }}"
