--- a/kubernetes/apps/media/lidarr/app/cronjobs/externalsecret.yaml
+++ b/kubernetes/apps/media/lidarr/app/cronjobs/externalsecret.yaml
@@ -15,7 +15,7 @@ spec:
     template:
       engineVersion: v2
       data:
-        DB_HOST: postgres-rw.database.svc.cluster.local
+        DB_HOST: postgres17-rw.database.svc.cluster.local
         DB_USER: "{{ .LIDARR__POSTGRES_USER }}"
         DB_PASS: "{{ .LIDARR__POSTGRES_PASSWORD }}"
   dataFrom:
