chore(peppermint): upgrade to postgres 17

--- a/kubernetes/apps/default/peppermint/app/externalsecret.yaml
+++ b/kubernetes/apps/default/peppermint/app/externalsecret.yaml
@@ -18,7 +18,7 @@ spec:
         # App
         DB_USERNAME: "{{ .POSTGRES_USER }}"
         DB_PASSWORD: "{{ .POSTGRES_PASS }}"
-        DB_HOST: postgres-rw.database.svc.cluster.local
+        DB_HOST: postgres17-rw.database.svc.cluster.local
   dataFrom:
     - extract:
         key: peppermint
