chore(radarr): move database host out of secret

--- a/kubernetes/apps/media/radarr/app/cronjobs/helmrelease-log-backup.yaml
+++ b/kubernetes/apps/media/radarr/app/cronjobs/helmrelease-log-backup.yaml
@@ -35,6 +35,7 @@ spec:
             env:
               DB_NAME: radarr_log
               FLAGS: "-Fc"
+              DB_HOST: postgres17-rw.database.svc.cluster.local
             envFrom:
               - secretRef:
                   name: radarr-db-backup-secret
