chore(wallabag): upgrade postgres to 17

--- a/kubernetes/apps/default/wallabag/app/externalsecret.yaml
+++ b/kubernetes/apps/default/wallabag/app/externalsecret.yaml
@@ -19,7 +19,7 @@ spec:
         # database
         SYMFONY__ENV__DATABASE_CHARSET: utf8
         SYMFONY__ENV__DATABASE_DRIVER: pdo_pgsql
-        SYMFONY__ENV__DATABASE_HOST: postgres-rw.database.svc.cluster.local
+        SYMFONY__ENV__DATABASE_HOST: postgres17-rw.database.svc.cluster.local
         SYMFONY__ENV__DATABASE_NAME: "{{ .db_name }}"
         SYMFONY__ENV__DATABASE_PASSWORD: "{{ .db_password }}"
         SYMFONY__ENV__DATABASE_PORT: "5432"
@@ -33,7 +33,7 @@ spec:
 
         # init database
         INIT_POSTGRES_DBNAME: "{{ .db_name }}"
-        INIT_POSTGRES_HOST: postgres-rw.database.svc.cluster.local
+        INIT_POSTGRES_HOST: postgres17-rw.database.svc.cluster.local
         INIT_POSTGRES_USER: "{{ .db_username }}"
         INIT_POSTGRES_PASS: "{{ .db_password }}"
         INIT_POSTGRES_SUPER_PASS: "{{ .POSTGRES_SUPER_PASS }}"
