--- a/kubernetes/apps/default/wallabag/app/cronjobs/externalsecret.yaml
+++ b/kubernetes/apps/default/wallabag/app/cronjobs/externalsecret.yaml
@@ -15,7 +15,7 @@ spec:
     template:
       engineVersion: v2
       data:
-        DB_HOST: postgres-rw.database.svc.cluster.local
+        DB_HOST: postgres17-rw.database.svc.cluster.local
         DB_USER: "{{ .db_username }}"
         DB_PASS: "{{ .db_password }}"
   dataFrom:
