--- a/kubernetes/apps/default/paperless-ngx/app/externalsecret.yaml
+++ b/kubernetes/apps/default/paperless-ngx/app/externalsecret.yaml
@@ -22,7 +22,7 @@ spec:
         PAPERLESS_DBNAME: paperless
         PAPERLESS_DBUSER: "{{ .POSTGRES_USER }}"
         PAPERLESS_DBPASS: "{{ .POSTGRES_PASS }}"
-        PAPERLESS_DBHOST: postgres-rw.database.svc.cluster.local
+        PAPERLESS_DBHOST: postgres17-rw.database.svc.cluster.local
         PAPERLESS_DBENGINE: postgres
 
         PAPERLESS_ADMIN_USER: "{{ .PAPERLESS_ADMIN_USER }}"
@@ -31,7 +31,7 @@ spec:
 
         # Postgres Init
         INIT_POSTGRES_DBNAME: paperless
-        INIT_POSTGRES_HOST: postgres-rw.database.svc.cluster.local
+        INIT_POSTGRES_HOST: postgres17-rw.database.svc.cluster.local
         INIT_POSTGRES_USER: "{{ .POSTGRES_USER }}"
         INIT_POSTGRES_PASS: "{{ .POSTGRES_PASS }}"
         INIT_POSTGRES_SUPER_PASS: "{{ .POSTGRES_SUPER_PASS }}"
