--- a/kubernetes/apps/default/n8n/app/externalsecret.yaml
+++ b/kubernetes/apps/default/n8n/app/externalsecret.yaml
@@ -20,7 +20,7 @@ spec:
         N8N_RUNNERS_ENABLED: "true"
 
         DB_POSTGRESDB_DATABASE: n8n
-        DB_POSTGRESDB_HOST: postgres-rw.database.svc.cluster.local
+        DB_POSTGRESDB_HOST: postgres17-rw.database.svc.cluster.local
         DB_POSTGRESDB_PORT: "5432"
         DB_POSTGRESDB_SCHEMA: public
         DB_POSTGRESDB_USER: "{{ .POSTGRES_USER }}"
@@ -28,7 +28,7 @@ spec:
 
         # Postgres Init
         INIT_POSTGRES_DBNAME: n8n
-        INIT_POSTGRES_HOST: postgres-rw.database.svc.cluster.local
+        INIT_POSTGRES_HOST: postgres17-rw.database.svc.cluster.local
         INIT_POSTGRES_USER: "{{ .POSTGRES_USER }}"
         INIT_POSTGRES_PASS: "{{ .POSTGRES_PASS }}"
         INIT_POSTGRES_SUPER_PASS: "{{ .POSTGRES_SUPER_PASS }}"
