--- a/kubernetes/apps/default/nextcloud/app/externalsecret.yaml
+++ b/kubernetes/apps/default/nextcloud/app/externalsecret.yaml
@@ -15,13 +15,13 @@ spec:
     template:
       engineVersion: v2
       data:
-        POSTGRES_HOST: postgres-rw.database.svc.cluster.local
+        POSTGRES_HOST: postgres17-rw.database.svc.cluster.local
         POSTGRES_USER: "{{ .db_username }}"
         POSTGRES_DB: "{{ .db_name }}"
         POSTGRESS_PASSWORD: "{{ .db_password }}"
 
         INIT_POSTGRES_DBNAME: "{{ .db_name }}"
-        INIT_POSTGRES_HOST: postgres-rw.database.svc.cluster.local
+        INIT_POSTGRES_HOST: postgres17-rw.database.svc.cluster.local
         INIT_POSTGRES_USER: "{{ .db_username }}"
         INIT_POSTGRES_PASS: "{{ .db_password }}"
         INIT_POSTGRES_SUPER_PASS: "{{ .POSTGRES_SUPER_PASS }}"
