--- a/kubernetes/apps/default/immich/app/helmrelease.yaml
+++ b/kubernetes/apps/default/immich/app/helmrelease.yaml
@@ -91,8 +91,10 @@ spec:
         runAsGroup: 100
         fsGroup: 100
         fsGroupChangePolicy: "OnRootMismatch"
+
     service:
       app:
+        type: LoadBalancer
         controller: immich
         ports:
           http:
