--- a/kubernetes/apps/default/kometa/app/helmrelease.yaml
+++ b/kubernetes/apps/default/kometa/app/helmrelease.yaml
@@ -19,13 +19,30 @@ spec:
             image:
               repository: kometateam/kometa
               tag: v2.2.2
-            env: 
+            env:
               KOMETA_TIMES: "06:00|18:00"
             resources:
               requests:
                 cpu: 100m
               limits:
                 memory: 750Mi
+    service:
+      app:
+        ports:
+          http:
+            port: &port 80
+
+    route:
+      app:
+        hostnames: ["{{ .Release.Name }}.kalde.in"]
+        parentRefs:
+          - name: external
+            namespace: kube-system
+            sectionName: https
+        rules:
+          - backendRefs:
+              - identifier: app
+                port: *port
     persistence:
       config:
         enabled: true
