chore: upgrade immich

--- a/kubernetes/apps/default/immich/app/helmrelease.yaml
+++ b/kubernetes/apps/default/immich/app/helmrelease.yaml
@@ -40,7 +40,7 @@ spec:
           app:
             image:
               repository: ghcr.io/immich-app/immich-server
-              tag: v2.2.3@sha256:4504d794123c3f5410cc45bbc61e4d7dbcacec1e1b0cd2e599691430c94e5849
+              tag: v2.3.1
             env: &env-common
               TZ: ${TZ}
               IMMICH_SERVER_URL: http://immich-server.default.svc.cluster.local:2283
@@ -67,7 +67,7 @@ spec:
           app:
             image:
               repository: ghcr.io/immich-app/immich-machine-learning
-              tag: v2.2.3@sha256:bf339cbb44af6c2ef25d9128e1da51b2bec0cfd524846a83e3017c21bd71ddb4
+              tag: v2.3.1
             env:
               MPLCONFIGDIR: "/cache/matplotlib"
             envFrom: *envFrom
