feat: add filebrowser

--- a/kubernetes/apps/default/kustomization.yaml
+++ b/kubernetes/apps/default/kustomization.yaml
@@ -11,6 +11,7 @@ resources:
   - ./consolewiki/ks.yaml
   - ./dailytrace/ks.yaml
   - ./echo/ks.yaml
+  - ./filebrowser/ks.yaml
   - ./home-assistant/ks.yaml
   - ./immich/ks.yaml
   - ./kapowarr/ks.yaml
