--- a/kubernetes/apps/storage/seaweedfs/app/externalsecret.yaml
+++ b/kubernetes/apps/storage/seaweedfs/app/externalsecret.yaml
@@ -15,7 +15,7 @@ spec:
     template:
       engineVersion: v2
       data:
-        config.json: |
+        seaweedfs_s3_config: |
           {
             "identities": [
               {
