--- a/kubernetes/apps/storage/seaweedfs/app/httproute.yaml
+++ b/kubernetes/apps/storage/seaweedfs/app/httproute.yaml
@@ -14,5 +14,5 @@ spec:
       sectionName: https
   rules:
     - backendRefs:
-        - name: seaweedfs-filer-s3
+        - name: seaweedfs-s3
           port: 8333
