feat(seaweedfs): add second identity for backups

--- a/kubernetes/apps/storage/seaweedfs/app/externalsecret.yaml
+++ b/kubernetes/apps/storage/seaweedfs/app/externalsecret.yaml
@@ -31,6 +31,19 @@ spec:
                   "Read",
                   "Write"
                 ]
+              },
+              {
+                "name": "{{ .backup_access_key }}",
+                "credentials": [
+                  {
+                    "accessKey": "{{ .backup_access_key }}",
+                    "secretKey": "{{ .backup_secret_key }}"
+                  }
+                ],
+                "actions": [
+                  "Read",
+                  "Write"
+                ]
               }
             ]
           }
