feat(seaweedfs): add bucket-level access control for identities

--- a/kubernetes/apps/storage/seaweedfs/app/externalsecret.yaml
+++ b/kubernetes/apps/storage/seaweedfs/app/externalsecret.yaml
@@ -30,7 +30,8 @@ spec:
                   "Admin",
                   "Read",
                   "Write"
-                ]
+                ],
+                "buckets": ["terraform-state"]
               },
               {
                 "name": "{{ .backup_access_key }}",
@@ -44,7 +45,8 @@ spec:
                   "Admin",
                   "Read",
                   "Write"
-                ]
+                ],
+                "buckets": ["backups", "restic-backups", "app-backups"]
               }
             ]
           }
